--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ ol {
 
 @media screen and (max-width: 1373px) {
   .nav-item_button {
-    margin: 0px 30px;
+    margin: 0px 0px 0px 20px ;
   }
 }
 
