--- a/style.css
+++ b/style.css
@@ -183,6 +183,15 @@ ol {
   }
 }
 
+@media screen and (max-width:596px) {
+  .header_container{
+    display: flex;
+      flex-wrap: wrap;
+      align-content: center;
+  }
+  
+}
+
 @media screen and (max-width: 425px) {
   .header_container {
     max-width: 1000px;
@@ -333,7 +342,12 @@ main {
   }
 }
 
-
+@media screen and (max-width:596px) {
+  .main_box_info {
+      max-width: 900px;
+      padding-top: 20px;
+    }
+}
 
 @media screen and (max-width: 425px) {
   .main_info {
@@ -429,6 +443,26 @@ main {
     margin: 66px 0px 88px 200px;
   }
 }
+
+@media screen and (max-width:596px) {
+    .block_Quest_info {
+        margin: 66px 0px 88px 150px;
+      }
+    
+      .block_title {
+        width: 300px;
+      }
+    
+      .block_Quest_info img {
+        width: 300px;
+        height: 250px;
+      }
+    
+      .block_text {
+        width: 300px;
+      }
+}
+
 @media screen and (max-width: 425px) {
   .block_Quest_info {
     margin: 66px 0px 88px 80px;
@@ -500,6 +534,20 @@ main {
     margin: 200px 0px 88px 150px;
   }
 }
+
+@media screen and (max-width:580px) {
+  .block_Wellnes_info {
+      margin: 200px 0px 88px 150px;
+    }
+  
+    .main_block_Wellnes .block_title {
+      width: 300px;
+    }
+        .main_block_Wellnes .main_butt{
+          margin-top: 15px;
+        }
+}
+
 @media screen and (max-width: 425px) {
   .block_Wellnes_info {
     margin: 200px 0px 88px 80px;
@@ -598,6 +646,13 @@ main {
   .main_block_Meet .block_text {
     color: white;
   }
+}
+
+@media screen and (max-width:580px) {
+  .block_Meet_info {
+      max-width: 100px;
+      margin: 100px 0px 136px 260px;
+    }
 }
 
 @media screen and (max-width: 425px) {
